--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "./components/emi-calculator/index.css";
+@import "./components/buffalo-visualizer/index.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
