added the latest changes in the snack bar

--- a/src/index.css
+++ b/src/index.css
@@ -261,7 +261,7 @@ body {
   height: 16rem;
 }
 
-.error {
+.page-error-state {
   display: flex;
   flex-direction: column;
   align-items: center;
