--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import "./components/sidenavbar/Calculators/Emi/index.css";
 @import "./components/sidenavbar/BuffaloViz/index.css";
 
 @tailwind base;
@@ -318,4 +317,17 @@ body {
 
 .animate-popIn {
   animation: popIn 0.2s ease-out;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
 }
