--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import "./styles/design_tokens.css";
 @import "./components/sidenavbar/BuffaloViz/index.css";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
